# r4-wifi-manager

./: .gitmodules  BoardOptions.cmake  CMakeLists.txt  LICENSE  Makefile  README.md
.circleci/: config.yml
assets/: homepage.html  saved.html
dockerfiles/: dev  dev-vim
include/r4-wifi-manager/: constants.hpp  eeprom-storage.hpp  r4-wifi-manager.hpp
src/: eeprom-storage.cpp  r4-wifi-manager.cpp
test/: CMakeLists.txt
test/include/: Arduino.cpp  Arduino.h  CRC.cpp  CRC.h  EEPROM.cpp  EEPROM.h  WiFiS3.cpp  WiFiS3.h
test/src/: eeprom-storage-test.cpp  r4-wifi-manager-test.cpp
